Updated styles to stop overflow in Not Found page

--- a/src/App.css
+++ b/src/App.css
@@ -562,9 +562,9 @@ img {
 /* Error Page */
 
 .not-found-page {
-  background-color: black;
   color: white;
   overflow: hidden;
+  max-height: 100vh;
   height: 100%;
   -webkit-user-select: none;
   -moz-user-select: none;
@@ -578,7 +578,6 @@ img {
   text-align: center;
   text-align: center;
   width: 100%;
-  height: 120px;
   margin: auto;
   position: absolute;
   top: 0;
@@ -868,7 +867,7 @@ img {
 }
 
 .not-found-page .wrap {
-  top: 30%;
+  top: 38%;
   left: 25%;
 
   height: 200px;
